# backend/app.js
@@ -27,6 +27,7 @@ app.use('/news', require('@routes/news'));
 app.use('/sectors', require('@routes/sector'));
 app.use('/event-categories', require('@routes/eventCategory'));
 app.use('/partner-types', require('@routes/partnerType'));
+app.use('/social-medias', require('@routes/socialMedia'));
 
 app.get('/', (req, res) => {
     res.send('Hello World !');
